name:                wumpus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/egnwd/fa-talk#readme
license:             BSD3
license-file:        LICENSE
author:              Elliot Greenwood
maintainer:          elliot@fundapps.co
copyright:           Elliot Greenwood
category:            example
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Messages
    Movement
    Data

  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    base >= 4.8 && < 5,
    containers >= 0.6.2,
    array >= 0.5.4,
    mtl >= 2.2.2,
    composition-extra >= 2.0,
    time >= 1.1,
    random >= 1.1

executable wumpus
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.8 && < 5,
    containers >= 0.6.2,
    array >= 0.5.4,
    mtl >= 2.2.2,
    composition-extra >= 2.0,
    time >= 1.1,
    random >= 1.1,
    wumpus
