name:                wumpus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/egnwd/fa-talk#readme
license:             BSD3
license-file:        LICENSE
author:              Elliot Greenwood
maintainer:          elliot@fundapps.co
copyright:           Elliot Greenwood
category:            example
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules:
    Wumpus

  other-modules:
    Wumpus.Data
    Wumpus.Messages
    Wumpus.Movement
    Wumpus.Utils

  ghc-options: -Wall -Wno-missing-signatures -Wredundant-constraints

  hs-source-dirs:   src
  default-language: Haskell2010
  build-depends:
    array >= 0.5.4,
    base >= 4.8 && < 5,
    composition-extra >= 2.0,
    cond >= 0.4.1,
    control-bool >= 0.2,
    containers >= 0.6.2,
    ghc >= 8.8.4,
    lens >= 4.19.2,
    MonadRandom >= 0.5.2,
    mtl >= 2.2.2,
    utility-ht >= 0.0.15

executable wumpus
  hs-source-dirs:      exe
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
    base >= 4.8 && < 5,
    wumpus
